[gd_scene load_steps=23 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/hero/Main Characters/Ninja Frog/Idle (32x32).png" type="Texture" id=2]
[ext_resource path="res://assets/hero/Main Characters/Ninja Frog/Jump (32x32).png" type="Texture" id=3]
[ext_resource path="res://assets/hero/Main Characters/Ninja Frog/Run (32x32).png" type="Texture" id=4]
[ext_resource path="res://assets/hero/Main Characters/Ninja Frog/Hit (32x32).png" type="Texture" id=5]
[ext_resource path="res://assets/hero/Main Characters/Ninja Frog/Fall (32x32).png" type="Texture" id=6]
[ext_resource path="res://assets/hero/Other/Shadow.png" type="Texture" id=7]
[ext_resource path="res://assets/hero/Other/Dust Particle.png" type="Texture" id=8]

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 0, 0.466165, 0.992481 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 9 )

[sub_resource type="Curve" id=11]
_data = [ Vector2( 0.005, 0.457055 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=12]
curve = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=13]
flag_disable_z = true
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 1.5
scale_random = 0.8
scale_curve = SubResource( 12 )
color_ramp = SubResource( 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 9 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}

[sub_resource type="Animation" id=7]
resource_name = "fall"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "hit"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}

[sub_resource type="Animation" id=4]
resource_name = "jump"
tracks/0/type = "value"
tracks/0/path = NodePath("texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=5]
resource_name = "run"
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 12, 9 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 10, 1.5 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 0, -16 )
collision_mask = 94
script = ExtResource( 1 )

[node name="steps_fx" type="Particles2D" parent="."]
visible = false
position = Vector2( -6, 14 )
rotation = 3.14159
scale = Vector2( 1, -1 )
emitting = false
amount = 10
lifetime = 0.5
one_shot = true
randomness = 0.5
process_material = SubResource( 13 )
texture = ExtResource( 8 )

[node name="shadow" type="Sprite" parent="."]
position = Vector2( 0, 16 )
scale = Vector2( 1, 0.125 )
texture = ExtResource( 7 )

[node name="texture" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 11

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7 )
shape = SubResource( 3 )

[node name="animation" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 1 )
anims/fall = SubResource( 7 )
anims/hit = SubResource( 6 )
anims/idle = SubResource( 2 )
anims/jump = SubResource( 4 )
anims/run = SubResource( 5 )

[node name="raycasts" type="Node2D" parent="."]
visible = false

[node name="raycast" type="RayCast2D" parent="raycasts"]
position = Vector2( -8, 10 )
enabled = true
cast_to = Vector2( 0, 12 )
collision_mask = 24

[node name="raycast2" type="RayCast2D" parent="raycasts"]
position = Vector2( 8, 10 )
enabled = true
cast_to = Vector2( 0, 12 )
collision_mask = 24

[node name="camera" type="Camera2D" parent="."]
current = true
limit_left = -16
limit_bottom = 260
limit_smoothed = true
drag_margin_left = 0.4
drag_margin_top = 0.3
drag_margin_right = 0.4
drag_margin_bottom = 0.3
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="hurtbox" type="Area2D" parent="."]
visible = false
collision_layer = 32
collision_mask = 2

[node name="collision" type="CollisionShape2D" parent="hurtbox"]
position = Vector2( 0, -1 )
shape = SubResource( 8 )

[node name="left" type="RayCast2D" parent="."]
visible = false
position = Vector2( 0, 7 )
enabled = true
cast_to = Vector2( -16, 0 )
collision_mask = 2

[node name="right" type="RayCast2D" parent="."]
visible = false
position = Vector2( 0, 7 )
enabled = true
cast_to = Vector2( 16, 0 )
collision_mask = 2

[node name="head_collider" type="Area2D" parent="."]
collision_mask = 16

[node name="collision" type="CollisionShape2D" parent="head_collider"]
position = Vector2( 0, -6.5 )
shape = SubResource( 14 )

[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="body_entered" from="head_collider" to="." method="_on_head_collider_body_entered"]
